# sanctum-engine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
app/: config.py  db.py  main.py
app/api/: health.py  models.py  settings.py  tasks.py
app/core/: context_manager.py  model_resolver.py  output_validator.py  task_runner.py
app/models/: db.py  schemas.py
app/runtimes/: base.py  ollama.py  openrouter.py
client/: README.md  pyproject.toml
client/sanctum_engine_client/: __init__.py  engine_client.py
docs/: PHASE0_SPEC.md
tests/: conftest.py  reliability_suite.py  test_context_manager.py  test_model_resolver.py  test_ollama_runtime.py  test_output_validator.py
